On branch grid, modified:   aria-practices.html. Editorial revisions to grid pattern description.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1518,7 +1518,7 @@
                 </ul>
             <p>
                 Uses of the <code>grid</code> pattern broadly fall into two categories: presenting tabular information (data grids) and grouping other widgets (layout grids).
-                While both data grids and layout grids employ the same ARIA roles, states, and properties, differences in their content and purpose surface factors that are important to consider in keyboard interaction design.
+                Even though both data grids and layout grids employ the same ARIA roles, states, and properties, differences in their content and purpose surface factors that are important to consider in keyboard interaction design.
                 To address these factors, the following two sections describe separate keyboard interaction patterns for data and layout grids.
             </p>
             <section id="dataGrid" class="notoc">
