On branch grid, modified:   aria-practices.html. Clarified grouping example in first paragraph of layout grid description.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1589,8 +1589,7 @@
                     <ul class="note">
                         <li>When the above grid navigation keys move focus, whether the focus
                             is sett on an element inside the cell or the grid cell depends on cell
-                            content. See <a href="gridNav_focus">Whether to Focus on a Cell or
-                                an Element Inside It</a>.
+                            content. See <a href="gridNav_focus">Whether to Focus on a Cell or an Element Inside It</a>.
                         </li>
                         <li>While navigation keys, such as arrow keys, are moving focus from
                             cell to cell, they are not available to do something like operate a
@@ -1631,9 +1630,10 @@
                 <h4>Layout Grids for Grouping Widgets</h4>
                 <p>
                 The <code>grid</code> pattern  can be used to group a set of interactive elements, such as links, buttons,  or checkboxes.
-                Since only one element in the entire grid is included in the tab sequence, this grouping can dramatically reduce the number of tab stops on a page.
-                Such grouping is especially valuable if scrolling through the grouped elements dynamically loads more of the same kind of elements from a large data set, effectively creating a tab sequence that the user can not complete.
-                If any of the elements being grouped also have associated elements that appear on hover, the <code>grid</code> pattern is also useful for providing keyboard access to those contextual elements of the user interface.
+                Since only one element in the entire grid is included in the tab sequence, grouping with a grid can dramatically reduce the number of tab stops on a page.
+                This is especially valuable if scrolling through a list of elements dynamically loads more of those elements from a large data set, such as in a continuous list of suggested products on a shopping site.
+                If elements in a list like this were in the tab sequence, keyboard users are effectively trapped in the list.
+                If any elements in the group also have associated elements that appear on hover, the <code>grid</code> pattern is also useful for providing keyboard access to those contextual elements of the user interface.
                 </p>
                 <p>
                 Unlike grids used to present data, A <code>grid</code> used for layout does not necessarily have header cells for labeling rows or columns and might contain only a single row or a single column.
@@ -1685,8 +1685,7 @@
                     <ul class="note">
                         <li>When the above grid navigation keys move focus, whether the focus
                             is sett on an element inside the cell or the grid cell depends on cell
-                            content. See <a href="gridNav_focus">Whether to Focus on a Cell or
-                                an Element Inside It</a>.
+                            content. See <a href="gridNav_focus">Whether to Focus on a Cell or an Element Inside It</a>.
                         </li>
                         <li>While navigation keys, such as arrow keys, are moving focus from
                             cell to cell, they are not available to do something like operate a
