simple checkbox example title, heading, and editorial changes
In examples/checkbox/checkbox1.html:
* Modified title ttag to "Simple Checkbox Example | WAI-ARIA Authoring Practices 1.1"
* Changed H1 text to match first part of title tag.
* Moved H1 inside Main
* Removed first H2 (it was redundant).
* Modified first paragraph to be a sentence that explains the example and links to the design pattern.
* Changed the target of the design pattern link to reference the section ID instead of the respec-generated heading ID.
* Other minor editorial corrections to text.

In aria-practices.html checkbox example section:
* Changed link text for checkbox1.html to match the H1 in target file
* Added brief explaination of the example.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1135,7 +1135,7 @@
         <h4>Examples</h4>
         <ul>
           <li>
-            <a href="examples/checkbox/checkbox-1.html">Checkbox role example</a>
+            <a href="examples/checkbox/checkbox-1.html">Simple Checkbox Example</a>: Demonstrates a simple 2-state checkbox.
           </li>
           <li>
             <a href="examples/checkbox/checkbox-2.html">Checkbox role example within a group</a>
