--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1135,10 +1135,11 @@
         <h4>Examples</h4>
         <ul>
           <li>
-            <a href="examples/checkbox/checkbox-1.html">Simple Checkbox Example</a>: Demonstrates a simple 2-state checkbox.
+            <a href="examples/checkbox/checkbox-1.html">Simple Two-State Checkbox Example</a>: Demonstrates a simple 2-state checkbox.
           </li>
           <li>
-            <a href="examples/checkbox/checkbox-2.html">Checkbox role example within a group</a>
+            <a href="examples/checkbox/checkbox-2.html">Tri-State Checkbox With Grouping Label Examples</a>: 
+            three example implementations that demonstrate how to make a widget that uses the <code>mixed</code> value for <code>aria-checked</code> and also show three different ways of labeling a collection of checkboxes so screen reader users can perceive that all members of the collection are part of a logical group.
           </li>
         </ul>
       </section>
