Tri-state checkbox example - editorial revision
modified:   examples/checkbox/checkbox-2.html.
Minor editorial revision to last sentence of second intro paragraph.

--- a/examples/checkbox/checkbox-2.html
+++ b/examples/checkbox/checkbox-2.html
@@ -19,7 +19,7 @@
     <p>
     In the below examples, a set of checkboxes is used to choose condiments for a sandwich. 
     The user can use the first checkbox, labeled "All Condiments", to quickly specify a desire for either all or none of the condiments. 
-    If the user chooses to have some but not all condiments, the "All Condiments" checkbox is "partially checked" (in the mixed state).
+    If the user chooses to have some but not all condiments, the "All Condiments" checkbox will reflect that state as "partially checked"; this is the <code>mixed</code> value of <code>aria-checked</code>.
      </p>
       <h2>Examples</h2>
       <div  class="group" id="example">
