--- a/aria-practices.html
+++ b/aria-practices.html
@@ -787,7 +787,7 @@
           <li>Each header tab in the tablist has a role of <a href="#tablist" class="role-reference">tab</a>.</li>
           <li>The accordion panel uses the role <a href="#tabpanel" class="role-reference">tabpanel</a> and should have an <a href="#aria-labelledby" class="property-reference">aria-labelledby</a> relationship referencing the corresponding header having a role of <a href="#tablist" class="role-reference">tab</a></li>
           <li>The tabpanel is considered a grouping for all content consisting of that tabpanel.</li>
-          <li>An accordion should manage the expanded/collapsed state of each tab by maintain its <a href="#aria-expanded" class="state-reference">aria-expanded</a> state.</li>
+          <li>An accordion should manage the expanded/collapsed state of each tab by maintaining its <a href="#aria-expanded" class="state-reference">aria-expanded</a> state.</li>
           <li>An accordion should manage the selected state of each tab by maintaining its <code class="state-reference">aria-selected</code> state.</li>
           <li>An accordion should convey the visibility of each tabpanel by maintaining its <a href="#aria-hidden" class="state-reference">aria-hidden</a> state.</li>
         </ul>
