Fixed aria-practices.html links in 3 files.
In following files, Changed href attributes referring to ../../aria-practices.html#ID; removed the file name so they are ../../#ID.
examples/coding-template/SingleImplementationExample-Template.html
examples/checkbox/checkbox-1.html
examples/checkbox/checkbox-2.html

--- a/examples/checkbox/checkbox-1.html
+++ b/examples/checkbox/checkbox-1.html
@@ -12,7 +12,7 @@
 <body>
   <main>
     <h1>Simple Two-State <code>Checkbox</code> Example</h1>
-    <p>Example of a simple two-state checkbox that implements the  <a href="../../aria-practices.html#checkbox">design pattern for checkbox</a>.</p>
+    <p>Example of a simple two-state checkbox that implements the  <a href="../../#checkbox">design pattern for checkbox</a>.</p>
     <h2 id="id_example">Example</h2>
     <div role="region" aria-labelledby="id_example">
         <div id="example">
@@ -104,7 +104,7 @@
   </main>
   
   <nav>
-  <a href="../../aria-practices.html#checkbox">Checkbox Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+  <a href="../../#checkbox">Checkbox Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
   </nav>
   
 </body>
