--- a/examples/checkbox/checkbox-2.html
+++ b/examples/checkbox/checkbox-2.html
@@ -13,7 +13,7 @@
     <main>
       <h1>Tri-State Checkbox With Grouping Label Examples</h1>
     <p>
-    Following are three example implementations of the <a href="../../aria-practices.html#checkbox">design pattern for checkbox</a> that demonstrate how to make a widget that uses the <code>mixed</code> value for <code>aria-checked</code>.
+    Following are three example implementations of the <a href="../../#checkbox">design pattern for checkbox</a> that demonstrate how to make a widget that uses the <code>mixed</code> value for <code>aria-checked</code>.
     These examples also show three different ways of labeling a collection of checkboxes so screen reader users can perceive that all members of the collection are part of a logical group.
     </p>
     <p>
@@ -238,7 +238,7 @@
     
 </main>
 <nav>
-  <a href="../../aria-practices.html#checkbox">Checkbox Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+  <a href="../../#checkbox">Checkbox Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
   </nav>
   </body>
   </html>
