--- a/examples/coding-template/SingleImplementationExample-Template.html
+++ b/examples/coding-template/SingleImplementationExample-Template.html
@@ -36,7 +36,7 @@
         <p>
             <!-- Provide an overview of the example where the first sentence provides a link to the section of aria-practices.html that describes the pattern this example implements. -->
             Replace this paragraph with an overview of the example that is something like the following.
-            The below example section demonstrates a simple checkbox that implements the  <a href="../../aria-practices.html#checkbox">design pattern for checkbox</a>.
+            The below example section demonstrates a simple checkbox that implements the  <a href="../../#checkbox">design pattern for checkbox</a>.
         </p>
         
     <section>
@@ -161,7 +161,7 @@
   </main>
   <nav>
   <!--  Update the pattern_ID parameter of this link to refer to the APG design pattern section related to this example.  -->
-  <a href="../../aria-practices.html#pattern_ID">EXAMPLE_NAME Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+  <a href="../../#pattern_ID">EXAMPLE_NAME Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
   </nav>
 </body>
 </html>
