Add breadcrumb design pattern

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1008,6 +1008,55 @@
         <p><a href="http://archive.dojotoolkit.org/nightly/dojotoolkit/dijit/tests/form/_autoComplete.html" title="dijit.form.ComboBox Unit Test" rel="nofollow">Dojo autocomplete</a></p>
       </section>
     </section>
+	
+    <section class="widget" id="breadcrumb">
+      <h3 class="widget-name">Breadcrumb</h3>
+      <table class="widget-features">
+        <caption>Characteristics:</caption>
+        <tbody>
+          <tr>
+            <th class="widget-description-head" scope="row">Description:</th>
+            <td class="widget-description">
+              <p>
+                A breadcrumb consists of a list of links to the parent pages of the current page in hierachical order.
+                These help users find their place within a website or web application.
+                Breadcrumbs are often placed (horizontally) under a page's header.
+              </p>
+              <p>
+                It is recommended authors use an ordered list to structure the list of links.
+                Visual seperators should be added through <abbr title="Cascading Style Sheets">CSS</abbr>.
+              </p>
+              <p class="ednote">Editors' note: ordered list makes the most sense from a semantic point of view and was voted most popular in the <a href="http://webaim.org/projects/screenreadersurvey5/#breadcrumb">WebAIM Screen Reader Survey 2014</a>.</p>
+            </td>
+          </tr>
+          <tr>
+            <th class="widget-keyboard-head" scope="row">Keyboard Interaction:</th>
+            <td class="widget-keyboard">
+              Not applicable.
+            </td>
+          </tr>
+          <tr>
+            <th class="widget-aria-head" scope="row">WAI-ARIA Roles, States, and Properties:</th>
+            <td class="widget-aria">
+              <ul>
+                <li>The widget should be labelled programmatically via a heading or via either <a href="#aria-label" class="property-reference">aria-label</a> or <a href="#aria-labelledby" class="property-reference">aria-labelledby</a>.
+                <li>The link to the current page has <a href="#aria-current" class="property-reference">aria-current</a> set to <code>page</code>.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th class="widget-example-head" scope="row">Example:</th>
+            <td class="widget-example">
+              <ul>
+                <li>
+                  <a href="">Breadcrumb design pattern example</a>
+                </li>
+              </ul>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
 
     <section class="widget" id="button">
       <h3>Button</h3>
