Added link to data grid examples
In the grid design pattern section of aria-practices.html, added a list item with a link to the examples/grid/dataGrids.html file.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1890,24 +1890,21 @@
             </ul>
             </section>
             <section class="notoc">
-                <h4>Example</h4>
+                <h4>Examples</h4>
                 <p class="note">Any examples referenced here that are hosted outside www.w3.org
                     may have changed and may not accurately exemplify the guidance in this section.
                     The APG task force is developing examples for APG version 1.1 that will be
                     directly incorporated into the guide.</p>
                 <ul>
-                    <li><a
-                        href="http://www.oaa-accessibility.org/examplep/grid1/"
-                        title="Grid Example: Reimbursement Form"
+                    <li><a href="examples/grid/dataGrids.html">Data Grids</a>: Three example implementations of the grid design pattern that include features relevant to tabular information, such as content editing, sort, and column hiding. </li>
+                    <li><a href="http://www.oaa-accessibility.org/examplep/grid1/" title="Grid Example: Reimbursement Form"
                         target="_blank"
                         rel="nofollow">Travel form (Open Ajax Alliance)</a></li>
-                    <li><a
-                        href="http://www.oaa-accessibility.org/examplep/grid2/"
+                    <li><a href="http://www.oaa-accessibility.org/examplep/grid2/"
                         title="Grid: Email Application"
                         target="_blank"
                         rel="nofollow">Email client (Open Ajax Alliance)</a></li>
-                    <li><a
-                        href="http://www.oaa-accessibility.org/examplep/grid2/"
+                    <li><a href="http://www.oaa-accessibility.org/examplep/grid2/"
                         title="Grid: Email Application"
                         target="_blank"
                         rel="nofollow">Grid Email Application sortable by column headers</a></li>
